# refbook_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
Scripts/: backend.sh
refbook/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
refbook/fixtures/: data.json
refbook/migrations/: 0001_initial.py  0002_alter_refbook_options.py  0003_alter_refbook_options_alter_refbookelement_options.py  0004_alter_refbookversion_options_and_more.py  0005_alter_refbookversion_active_from.py  0006_alter_refbookelement_code_alter_refbookelement_name_and_more.py  0007_alter_refbookversion_active_from_and_more.py  0008_rename_name_refbookelement_value.py  0009_alter_refbook_options_alter_refbookelement_options.py
refbook/templates/: swagger-ui.html
refbook_api/: asgi.py  settings.py  urls.py  wsgi.py
static/: schema.yaml
